сайт с урока 2,попытка номер 3

--- a/index2.html
+++ b/index2.html
@@ -17,7 +17,7 @@
 </h1>
 <hr>
 <h2 class="zlodeyzagalovok">
-    новый злодей
+    кто станет новым злодеем?
 </h2>
 <img src="d40d16388a42303e5bc01c5d83e437cd.jpg" class="braznic">
 <pre class="zlodey">
