сайт с урока 2,задание 5

--- a/index2.html
+++ b/index2.html
@@ -135,6 +135,13 @@
     </li>
 </ul>
     </div>
+<div class="TheEnd">
+    <p>
+        <em>
+        я думаю,что 6 сезон будет крутым
+        </em>
+    </p>
+</div>
 <img src="636_original.jpg" class="photo">
 </body>
 </html>
