сайт с урока 2,задание 5

--- a/index2.html
+++ b/index2.html
@@ -135,7 +135,7 @@
     </li>
 </ul>
     </div>
-<div class="TheEnd">
+<div class="ThEend">
     <p>
         <em>
         я думаю,что 6 сезон будет крутым
